--- a/rep02.html
+++ b/rep02.html
@@ -30,12 +30,10 @@
       <h3>2-1 2週目のレポートをHTMLで作る</h3>
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        2週目ではGithubを活用して、HTMLを作ってレポートを書いたり編集したりする体験などをを行った。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
-        3. 2週目が完成した人は1週目のレポートも完成させる<br>
+        Githabを使ってはじめてホームページを作ったので、編集の仕方を学んだ。URLなどを張り付けて、とても見やすいレポートを作れた思う。<br>
+        <br>
       </div>
     </div>
 
@@ -44,11 +42,9 @@
       <img src="ml.png" alt="ML" width="50%" height="50%">
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        生成AIにグー、チョキ、パーの写真合計300枚くらい覚えさせて、それらの判別の行えるようなAIを作る体験をした。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        生成AIは間違えることもあるが、高確率で当てることができて、生成AIの賢さを改めて感じる体験であった。<br>
       </div>
     </div>
 
@@ -58,11 +54,9 @@
       <img src="roblox.png" alt="RBLX" width="50%" height="50%">
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        学校のVRゴーグルを借りて実際にVR空間に入ってしてどんなことができるか、どんな感じに見えるか、などの体験を行った。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        目だけでまるで別の空間に入って、自分が動いているかのような、不思議な気持ちになった。後々このVR空間日常で使われる時代が来ると思った。<br>
       </div>
     </div>
 
