--- a/rep03.html
+++ b/rep03.html
@@ -31,11 +31,9 @@
       <a href="https://Chihito0501.github.io/web/vr.html">自作した３次元空間</a><br>
       <div>
         1.内容<br>
-        JavaScriptを使って実際にVR空間を作った。<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        JavaScriptを使い、実際にプログラミングでVR空間の物体の自由に動かして自分だけのＶＲ空間を作った。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        VR空間で球体を組み合わせてアニメキャラクターを作ったのですが、それを３Ｄで見るとずれていたりするので大変だった。<br>
       </div>
     </div>
     <div>
@@ -44,11 +42,9 @@
       <a href="https://Chihito0501.github.io/web/dengon.html">伝言板</a><br>
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        JavaScriptを使って、実際に自分でコマンドを打ち、間違えなどを修正して、伝言ゲームを作る体験を行った。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        自分で打ったプログラムから待ち間違えを探すのはとても大変なので、間違えを見つけるときは必ず注意深く見なければならない。<br>
       </div>
     </div>
 
@@ -57,11 +53,10 @@
       <img src="interactive.png" alt="JavaScript" width="20%" height="20%"><br>
       <div>
         1.内容<br>
-        学習した内容を説明する文章を<br>
-        自分で考えて作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        JavaScriptのプログラムで作った3次元空間の中に入って、コントロールなどで実際に動いたりした。<br>
         2.感想<br>
-        学習した内容を実践したときに自分が感じた感想を<br>
-        自分で考えた文章で作成する（50文字以上．100文字程度を推奨．※生成AIを使ってはいけない）<br>
+        JavaScriptのプログラムで作った3D空間の中に入って、コントロールなどで物体を動かしたりして面白かった。<br>
+        <br>
       </div>
     </div>
 
