--- a/rep01.html
+++ b/rep01.html
@@ -45,7 +45,7 @@
         1.内容<br>
         第１週目総合工学システム学科１年知能情報コースでは、スクラッチを用いたプログラミングの体験学習でゲーム作成<br>
         2.感想<br>
-        アート作成作成と同様ネコを自由に動かすことができてゲームでは、矢印キーを使って動かすことができたので、たのしかった。<br>
+        アート作成と同様ネコを自由に動かすことができてゲームでは、矢印キーを使って動かすことができたので、たのしかった。<br>
       </div>
     </div>
 
