--- a/rep02.html
+++ b/rep02.html
@@ -30,7 +30,7 @@
       <h3>2-1 2週目のレポートをHTMLで作る</h3>
       <div>
         1.内容<br>
-        2週目ではGithubを活用して、HTMLを作ってレポートを書いたり編集したりする体験などをを行った。<br>
+        2週目ではGithubを活用して、HTMLを作ってレポートを書いたり編集したりする体験などを行った。<br>
         2.感想<br>
         Githabを使ってはじめてホームページを作ったので、編集の仕方を学んだ。URLなどを張り付けて、とても見やすいレポートを作れた思う。<br>
         <br>
